Adding slide in home

--- a/products/templates/base.html
+++ b/products/templates/base.html
@@ -32,6 +32,23 @@
       });
       </script>
 
+      <script>
+      $(document).ready(function(){
+            $('.slider').slider();
+          });
+      </script>
+
+<script>
+      // Pause slider
+$('.slider').slider('pause');
+// Start slider
+$('.slider').slider('start');
+// Next slide
+$('.slider').slider('next');
+// Previous slide
+$('.slider').slider('prev');
+</script>
+
   </main>
 
   <footer class="StickyFooter">
