--- a/products/templates/index.html
+++ b/products/templates/index.html
@@ -6,21 +6,38 @@
    <br><br>
     <div class="col s12 offset-m2 m8 offset-l3 l6">
 
-
-           <ul class="collapsible popout" data-collapsible="accordion">
-              <li>
-                 <div class="collapsible-header"><i class="material-icons">filter_drama</i>First Section</div>
-                 <div class="collapsible-body"><p>This is first section.</p></div>
-              </li>
-              <li>
-                 <div class="collapsible-header"><i class="material-icons">place</i>Second Section</div>
-                 <div class="collapsible-body"><p>This is second section.</p></div>
-              </li>
-              <li>
-                 <div class="collapsible-header"><i class="material-icons">whatshot</i>Third Section</div>
-                 <div class="collapsible-body"><p>This is third section.</p></div>
-              </li>
-           </ul>
+      <div class="slider">
+          <ul class="slides">
+            <li>
+              <img src="https://lorempixel.com/580/250/nature/1"> <!-- random image -->
+              <div class="caption center-align">
+                <h3>This is our big Tagline!</h3>
+                <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+              </div>
+            </li>
+            <li>
+              <img src="https://lorempixel.com/580/250/nature/2"> <!-- random image -->
+              <div class="caption left-align">
+                <h3>Left Aligned Caption</h3>
+                <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+              </div>
+            </li>
+            <li>
+              <img src="https://lorempixel.com/580/250/nature/3"> <!-- random image -->
+              <div class="caption right-align">
+                <h3>Right Aligned Caption</h3>
+                <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+              </div>
+            </li>
+            <li>
+              <img src="https://lorempixel.com/580/250/nature/4"> <!-- random image -->
+              <div class="caption center-align">
+                <h3>This is our big Tagline!</h3>
+                <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+              </div>
+            </li>
+          </ul>
+        </div>
            <br><br>
   </div>
 </div>
