Testing color page layout

--- a/products/templates/footer.html
+++ b/products/templates/footer.html
@@ -1,5 +1,5 @@
 {% block footer %}
-<footer class="page-footer deep-orange accent-3">
+<footer class="page-footer green accent-4">
        <div class="container">
          <div class="row">
            <div class="col l6 s12">
