--- a/products/templates/header.html
+++ b/products/templates/header.html
@@ -1,8 +1,8 @@
 {% block header %}
 <nav>
 
-   <div class="nav-wrapper deep-orange accent-3">
-     <a href="#" class="brand-logo center"> <img class="responsive-img" src="static/images/My.png"</a>
+   <div class="nav-wrapper green accent-4">
+     <a href="#" class="brand-logo center"> <img class="responsive-img" src=""</a>
      <ul id="nav-mobile" class="left hide-on-med-and-down">
        <li><a href="sass.html">Sass</a></li>
        <li><a href="badges.html">Components</a></li>
