--- a/products/templates/index.html
+++ b/products/templates/index.html
@@ -9,31 +9,31 @@
       <div class="slider">
           <ul class="slides">
             <li>
-              <img src="https://lorempixel.com/580/250/nature/1"> <!-- random image -->
+              <img src="http://bit.ly/2wAeiNU"> <!-- random image -->
               <div class="caption center-align">
-                <h3>This is our big Tagline!</h3>
-                <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                <h3 class="black-text ">Projeto Ecom_Merci</h3>
+                <h5 class="black-text text-lighten-3">Desenho de Software 2.2017</h5>
               </div>
             </li>
             <li>
-              <img src="https://lorempixel.com/580/250/nature/2"> <!-- random image -->
+              <img src="http://bit.ly/2wAeiNU"> <!-- random image -->
               <div class="caption left-align">
-                <h3>Left Aligned Caption</h3>
-                <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                <h3 class="black-text ">Alunos</h3>
+                <h5 class="black-text text-lighten-3">Bernardo,<br>Eliseu,<br> Gabriela,<br> Iago,<br> João,<br> Mateus e<br> Renata</h5>
               </div>
             </li>
             <li>
-              <img src="https://lorempixel.com/580/250/nature/3"> <!-- random image -->
+              <img src="http://bit.ly/2wAeiNU"> <!-- random image -->
               <div class="caption right-align">
-                <h3>Right Aligned Caption</h3>
-                <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                <h3 class="black-text ">Bem-Vindo !</h3>
+                <h5 class="black-text text-lighten-3">Esperamos que sua experiência seja agradável</h5>
               </div>
             </li>
             <li>
-              <img src="https://lorempixel.com/580/250/nature/4"> <!-- random image -->
+              <img src="http://bit.ly/2wAeiNU"> <!-- random image -->
               <div class="caption center-align">
-                <h3>This is our big Tagline!</h3>
-                <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                <h3 class="black-text ">Em breve, novas funcionalidades!</h3>
+                <h5 class="black-text text-lighten-3">Aguarde...</h5>
               </div>
             </li>
           </ul>
