Trying apply materialize

--- a/users/templates/signup.html
+++ b/users/templates/signup.html
@@ -1,4 +1,6 @@
-{% block content %}
+{%  extends "base.html" %}
+{% block main_content %}
+
   <h2>Cadastro</h2>
   <form method="post">
 
@@ -45,4 +47,5 @@
   </div>
     <button type="submit">Cadastrar</button>
   </form>
-{% endblock %}
+
+{% endblock main_content %}
