Changing style of page Sign_up

--- a/users/templates/header.html
+++ b/users/templates/header.html
@@ -1,7 +1,7 @@
 {% block header %}
 <nav>
 
-   <div class="nav-wrapper deep-orange accent-3">
+   <div class="nav-wrapper green accent-3">
      <a href="#" class="brand-logo center"> <img class="responsive-img" src="static/images/My.png"</a>
      <ul id="nav-mobile" class="left hide-on-med-and-down">
        <li><a href="sass.html">Sass</a></li>
