--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -21,7 +21,15 @@
   </head>
 
   <main class="StickyContent">
-    {% block main_content %} {% endblock main_content %}
+    <div class="content container">
+        <div class="row">
+            <div class="col-md-8">
+                  {% block main_content %}
+                  {% endblock main_content %}
+            </div>
+        </div>
+    </div>
+
     <script type="text/javascript" src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/bin/materialize.min.js' %}"></script>
 
