--- a/users/templates/signup.html
+++ b/users/templates/signup.html
@@ -1,54 +1,50 @@
+
 {%  extends "base.html" %}
 {% block main_content %}
 <body>
   <div class="container">
-  <h2>Cadastro</h2>
+<br>
     <form method="post">
+      {% csrf_token %}
 
-        <div class="row">
-        <form class="col s12">
+  <body class="green accent-4">
+    <!-- Start Page Loading -->
+    <div id="loader-wrapper">
+        <div id="loader"></div>
+        <div class="loader-section section-left"></div>
+        <div class="loader-section section-right"></div>
+    </div>
+    <!-- End Page Loading -->
+
+
+    <div id="login-page" class="row">
+      <div class="col s12 z-depth-4 card-panel">
+        <form class="login-form">
           <div class="row">
-            <!-- Name field-->
-            <div class="input-field col s6">
-              <input placeholder="Nome" id="first_name" type="text" class="validate">
-              <label for="username">Nome</label>
-            </div>
-            <!-- Last name field-->
-            <div class="input-field col s6">
-              <input placeholder="Sobrenome" id="last_name" type="text" class="validate">
-              <label for="username">Sobrenome</label>
-            </div>
-            <!-- Username field-->
-            <div class="input-field col s6">
-              <input placeholder="Nome" id="username" type="text" class="validate">
-              <label for="username">Escolha seu nome de usuário</label>
-            </div>
-            <!-- Password field-->
-          <div class="row">
-            <div class="input-field col s6">
-              <input placeholder="Senha" id="password" type="password" class="validate">
-              <label for="password">Criar uma senha</label>
+            <div class="input-field col s12 center">
+              <h4>Cadastro</h4>
+              <p class="center">Cadastre-se agora !</p>
             </div>
           </div>
+          <div class="container">
+          {{ form.as_table }}
+        </div>
 
-        <!-- Email field-->
-          <div class="row">
-            <div class="input-field col s6">
-              <input placeholder="Email" id="email" type="email" class="validate">
-              <label for="email" data-error="Email inválido">Insira seu email</label>
-            </div>
-          </div>
-
-
-        <!-- Sign_up button -->
-        <div>
-          <button class="btn waves-effect  green accent-4 right" type="submit" name="action">Cadastrar
+            <div class="input-field col s12">
+              <button class="btn waves-effect  green accent-4 right" type="submit" name="action">Cadastrar
             <i class="material-icons right">send</i>
-          </button>
+            </div>
+
+            <div class="input-field col s12">
+              <p class="margin center medium-small sign-up">Já possui conta? <a>Login</a></p>
+
+          </div>
+        </form>
+      </div>
+    </div>
         </div>
       </div>
     </form>
   </div>
 </body>
-
 {% endblock main_content %}
