--- a/users/templates/signup.html
+++ b/users/templates/signup.html
@@ -1,9 +1,15 @@
-
 {%  extends "base.html" %}
 {% block main_content %}
 <body>
   <div class="container">
 <br>
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
     <form method="post">
       {% csrf_token %}
 
