Change header color and add login link

--- a/ecom_merci/templates/header.html
+++ b/ecom_merci/templates/header.html
@@ -1,13 +1,15 @@
 {% block header %}
 <nav>
-
-   <div class="nav-wrapper green accent-4">
-     <a href="#" class="brand-logo center"> <img class="responsive-img" src=""</a>
-     <ul id="nav-mobile" class="left hide-on-med-and-down">
-       <li><a href="sass.html">Sass</a></li>
-       <li><a href="badges.html">Components</a></li>
-       <li><a href="collapsible.html">JavaScript</a></li>
-     </ul>
-   </div>
- </nav>
+  <div class="nav-wrapper black">
+    <a href="/">
+    <img src="../static/images/logo.png" height="64" class="responsive-image" width="64">
+    </a>
+    <a href="/">
+    <img src="../../../static/images/texto.png" height="64" class="brand-logo responsive-image left-align">
+    </a>
+    <ul class="right hide-on-med-and-down">
+      <li><i class="large material-icons">account_circle</i></li>
+      <li><a href="/users/login/">Login</a></li>
+  </div>
+</nav>
  {% endblock%}
