--- a/users/templates/signup.html
+++ b/users/templates/signup.html
@@ -13,7 +13,7 @@
     <form method="post">
       {% csrf_token %}
 
-  <body class="green accent-4">
+  <body class="light-green lighten-5">
     <!-- Start Page Loading -->
     <div id="loader-wrapper">
         <div id="loader"></div>
@@ -24,7 +24,7 @@
 
 
     <div id="login-page" class="row">
-      <div class="col s12 z-depth-4 card-panel">
+      <div class="col s12 z-depth-5 card-panel">
         <form class="login-form">
           <div class="row">
             <div class="input-field col s12 center">
@@ -42,8 +42,9 @@
             </div>
 
             <div class="input-field col s12">
-              <p class="margin center medium-small sign-up">Já possui conta? <a>Login</a></p>
 
+              <p class="margin center medium-small sign-up">Já possui conta? <a>Login</a></p>
+              <br>
           </div>
         </form>
       </div>
