--- a/ecom_merci/templates/header.html
+++ b/ecom_merci/templates/header.html
@@ -1,8 +1,8 @@
 {% block header %}
 <nav>
-  <div class="nav-wrapper black">
+  <div class="nav-wrapper black accent-4">
     <a href="/">
-    <img src="../static/images/logo.png" height="64" class="responsive-image" width="64">
+    <img src="../../../static/images/logo.png" height="64" class="responsive-image" width="64">
     </a>
     <a href="/">
     <img src="../../../static/images/texto.png" height="64" class="brand-logo responsive-image left-align">
@@ -10,6 +10,7 @@
     <ul class="right hide-on-med-and-down">
       <li><i class="large material-icons">account_circle</i></li>
       <li><a href="/users/login/">Login</a></li>
+      <li><a href="/users/sign_up/">Criar conta</a></li>
   </div>
 </nav>
  {% endblock%}
