--- a/users/templates/signup.html
+++ b/users/templates/signup.html
@@ -22,31 +22,35 @@
     </div>
     <!-- End Page Loading -->
 
-
+    <div class="container">
     <div id="login-page" class="row">
       <div class="col s12 z-depth-5 card-panel">
         <form class="login-form">
           <div class="row">
             <div class="input-field col s12 center">
-              <h4>Cadastro</h4>
+              <h4 >Cadastro</h4>
               <p class="center">Cadastre-se agora !</p>
             </div>
           </div>
+
           <div class="container">
           {{ form.as_table }}
         </div>
 
+
             <div class="input-field col s12">
-              <button class="btn waves-effect  green accent-4 right" type="submit" name="action">Cadastrar
+              <button class="btn waves-effect  black accent-4 right" type="submit" name="action">Cadastrar
             <i class="material-icons right">send</i>
             </div>
 
             <div class="input-field col s12">
 
-              <p class="margin center medium-small sign-up">Já possui conta? <a>Login</a></p>
+              <p class="margin center medium-small sign-up">Já possui conta? <a href="/users/login/">Login</a></p>
               <br>
           </div>
         </form>
+      </div>
+      </div>
       </div>
     </div>
         </div>
