--- a/users/templates/edit.html
+++ b/users/templates/edit.html
@@ -1,11 +1,54 @@
 {% block content %}
 
-<h2> Atualize seus dados </h2>
+<body class="light-green lighten-5">
+
+  <div class="container">
+<br>
 
 <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Atualizar</button>
-</form>
+  {% csrf_token %}
+
+  <!-- Start Page Loading -->
+  <div id="loader-wrapper">
+      <div id="loader"></div>
+      <div class="loader-section section-left"></div>
+      <div class="loader-section section-right"></div>
+  </div>
+  <!-- End Page Loading -->
+
+  <div class="container">
+  <div id="login-page" class="row">
+    <div class="col s12 z-depth-5 card-panel">
+      <form class="login-form">
+        <div class="row">
+          <div class="input-field col s12 center">
+            <h4>Atualizar cadastro</h4>
+          </div>
+        </div>
+
+        <div class="container">
+        {{ form.as_table }}
+      </div>
+
+
+          <div class="input-field col s12">
+            <button class="btn waves-effect  black accent-4 right" type="submit" name="action">Atualizar
+          <i class="material-icons right">send</i>
+          </div>
+
+          <div class="input-field col s12">
+            <br>
+        </div>
+      </form>
+    </div>
+    </div>
+    </div>
+  </div>
+      </div>
+    </div>
+  </form>
+</div>
+<br>
+</body>
 
 {% endblock %}
