Adding carousel J-query in base.html

--- a/ecom_merci/templates/base.html
+++ b/ecom_merci/templates/base.html
@@ -49,6 +49,12 @@ $('.slider').slider('next');
 $('.slider').slider('prev');
 </script>
 
+<script>
+$(document).ready(function(){
+     $('.carousel').carousel();
+   });
+  </script>
+
   </main>
 
   <footer class="StickyFooter">
