Adding homepage elements

--- a/ecom_merci/templates/home.html
+++ b/ecom_merci/templates/home.html
@@ -1,7 +1,27 @@
 {%  extends "base.html" %}
 {% block main_content %}
+<body>
+<div class="carousel">
+   <a class="carousel-item" href="#one!"><img src="../../../static/images/carrossel1.jpg"></a>
+   <a class="carousel-item" href="#one!"><img src="../../../static/images/carrossel2.png"></a>
+   <a class="carousel-item" href="#one!"><img src="../../../static/images/carrossel3.jpg"></a>
+   <a class="carousel-item" href="#one!"><img src="../../../static/images/carrossel4.jpg"></a>
+   <a class="carousel-item" href="#one!"><img src="../../../static/images/carrossel5.jpg"></a>
+ </div>
 
+<div class="container">
+ <div class="row center-align">
+     <div class="col s4">
+      Produto 1
+     </div>
+     <div class="col s4">
+        Produto 2
+     </div>
+     <div class="col s4">
+       Produto 3
+     </div>
 
-<h2> Pagina inicial </h2>
-
+   </div>
+ </div>
+</body>
 {% endblock main_content %}
