Adding import from template base html

--- a/products/templates/productIndex.html
+++ b/products/templates/productIndex.html
@@ -1,3 +1,5 @@
+{%  extends "base.html" %}
+{% block main_content %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -29,3 +31,4 @@
   </body>
 
 </html>
+{% endblock main_content %}
