--- a/products/templates/categoryDetail.html
+++ b/products/templates/categoryDetail.html
@@ -1,3 +1,5 @@
+{%  extends "base.html" %}
+{% block main_content %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -32,3 +34,4 @@
   </body>
 
 </html>
+{% endblock main_content %}
