--- a/products/templates/productDetail.html
+++ b/products/templates/productDetail.html
@@ -1,3 +1,5 @@
+{%  extends "base.html" %}
+{% block main_content %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -33,3 +35,4 @@
       </div>
   </body>
 </html>
+{% endblock main_content %}
