Aligning footer in layout page

--- a/ecom_merci/templates/footer.html
+++ b/ecom_merci/templates/footer.html
@@ -1,5 +1,5 @@
 {% block footer %}
-<footer class="page-footer black accent-4">
+<footer class="page-footer black accent-4" style="position:absolute; bottom:0; width:100%">
        <div class="footer-copyright">
          <div class="container">
          © 2017 Copyright Ecom_merci
