--- a/ecom_merci/templates/header.html
+++ b/ecom_merci/templates/header.html
@@ -1,6 +1,6 @@
 {% block header %}
 <nav>
-  <div class="nav-wrapper black accent-4">
+  <div class="nav-wrapper black accent-4" style="min-height=100%">
     <a href="/">
     <img src="../../../static/images/logo.png" height="64" class="responsive-image" width="64">
     </a>
