--- a/ecom_merci/templates/base.html
+++ b/ecom_merci/templates/base.html
@@ -1,8 +1,8 @@
 
 <!DOCTYPE html>
-<html>
+<html style="height:100%">
 {% load i18n %}
-<body>
+<body style="height:100%; position:relative">
   <head>
 
     <!--Import Google Icon Font-->
