--- a/ecom_merci/templates/footer.html
+++ b/ecom_merci/templates/footer.html
@@ -1,5 +1,19 @@
+<style type="text/css">
+#footer	{
+            
+            margin: 0px auto 0px auto;
+            padding: 0px 0 0 0;
+            text-align: center;
+            position: absolute;
+            bottom:0;
+            width: 100%;
+            
+            }
+</style>
+
+
 {% block footer %}
-<footer class="page-footer black accent-4" style="position:absolute; bottom:0; width:100%">
+<footer class="page-footer black accent-4">
        <div class="footer-copyright">
          <div class="container">
          © 2017 Copyright Ecom_merci
