--- a/ecom_merci/templates/home.html
+++ b/ecom_merci/templates/home.html
@@ -78,6 +78,9 @@
        {% endfor %}
      </div>
      <div class="col s4">
+        Produto 1
+     </div>
+     <div class="col s4">
         Produto 2
      </div>
      <div class="col s4">
