Fix footer problems

--- a/ecom_merci/static/stylesheets/materialize.css
+++ b/ecom_merci/static/stylesheets/materialize.css
@@ -6860,4 +6860,13 @@ button.picker__today:focus, button.picker__clear:focus, button.picker__close:foc
   stroke-linecap: round;
   /*shape-rendering: crispEdges;*/ }
 
+  body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+  }
+
+  main {
+    flex: 1 0 auto;
+  }
 /*# sourceMappingURL=materialize.css.map */
