Improving footer display

--- a/ecom_merci/templates/footer.html
+++ b/ecom_merci/templates/footer.html
@@ -1,23 +1,43 @@
 <style type="text/css">
 #footer	{
-            
+
             margin: 0px auto 0px auto;
             padding: 0px 0 0 0;
             text-align: center;
-            position: absolute;
+            position: fixed;
             bottom:0;
             width: 100%;
-            
+
             }
 </style>
 
-
-{% block footer %}
-<footer class="page-footer black accent-4">
-       <div class="footer-copyright">
-         <div class="container">
-         © 2017 Copyright Ecom_merci
-         </div>
-       </div>
-     </footer>
-{% endblock %}
+<footer class="page-footer">
+  <div class="container">
+    <div class="row">
+      <div class="col l6 s12">
+        <h5 class="white-text">Ecom_Merci </h5>
+        <p class="grey-text text-lighten-4"> COMERCIO DE PRODUTOS ESPORTIVOS LTDA. CNPJ XX.XXX.XXXX/XXXX-XX
+        <br>+55 61 xxxx-xxxx
+        <br>sac@ecommerci.com
+        <br>Endereço: Brasília - DF. CEP: XXXXX-XXX</p>
+      </div>
+      <div class="col l4 offset-l2 s12">
+        <h5 class="white-text">Redes Sociais</h5>
+        <ul>
+          <li><a class="grey-text text-lighten-3" href="https://www.instagram.com/">
+            <img alt="www.instagram.com/" src="http://4.bp.blogspot.com/-x0kyS1IwLgg/VpqE3TAwmwI/AAAAAAAACQQ/e_xlOZzwN4U/s1600/instagramc.png" border = "0"></img>
+          </a></li>
+          <li><a class="grey-text text-lighten-3" href="https://www.facebook.com/">
+            <img alt="www.facebook.com/" src="http://4.bp.blogspot.com/-lX7YOdhI8-U/VpqE3aucYGI/AAAAAAAACQI/N_2NQrv7pZc/s1600/facebookjxy.png" border="0"></img>
+          </a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="footer-copyright">
+    <div class="container">
+    © 2017 Copyright Ecom_merci
+    <a class="grey-text text-lighten-4 right" href="#!">Ecom_Merci</a>
+    </div>
+  </div>
+</footer>
