--- a/ecom_merci/templates/home.html
+++ b/ecom_merci/templates/home.html
@@ -1,13 +1,25 @@
 {%  extends "base.html" %}
 {% block main_content %}
 <body>
-<div class="carousel">
-   <a class="carousel-item" href="#one!"><img src="../../../static/images/carrossel1.jpg"></a>
-   <a class="carousel-item" href="#one!"><img src="../../../static/images/carrossel2.png"></a>
-   <a class="carousel-item" href="#one!"><img src="../../../static/images/carrossel3.jpg"></a>
-   <a class="carousel-item" href="#one!"><img src="../../../static/images/carrossel4.jpg"></a>
-   <a class="carousel-item" href="#one!"><img src="../../../static/images/carrossel5.jpg"></a>
- </div>
+ <br>
+ <div class="carousel carousel-slider center" data-indicators="true">
+  <div class="carousel-item red white-text" href="#one!">
+    <h2>First Panel</h2>
+    <p class="white-text">This is your first panel</p>
+  </div>
+  <div class="carousel-item amber white-text" href="#two!">
+    <h2>Second Panel</h2>
+    <p class="white-text">This is your second panel</p>
+  </div>
+  <div class="carousel-item green white-text" href="#three!">
+    <h2>Third Panel</h2>
+    <p class="white-text">This is your third panel</p>
+  </div>
+  <div class="carousel-item blue white-text" href="#four!">
+    <h2>Fourth Panel</h2>
+    <p class="white-text">This is your fourth panel</p>
+  </div>
+</div>
 
  <div class="products">
       {% for product in products %}
