Leaving page suitable for smartphones

--- a/ecom_merci/templates/base.html
+++ b/ecom_merci/templates/base.html
@@ -35,8 +35,11 @@
       <script>
       $(document).ready(function(){
             $('.slider').slider();
+            $(".button-collapse").sideNav();
           });
       </script>
+
+
 
 <script>
       // Pause slider
