--- a/ecom_merci/templates/header.html
+++ b/ecom_merci/templates/header.html
@@ -1,16 +1,23 @@
 {% block header %}
 <nav>
   <div class="nav-wrapper black accent-4" style="min-height=100%">
-    <a href="/">
-    <img src="../../../static/images/logo.png" height="64" class="responsive-image" width="64">
+    <a href="/" class="brand-logo responsive-image center">
+      <img src="../../../static/images/logo.png" height="56" width="56">
+      <img src="../../../static/images/texto.png" height="56" class="responsive-image">
     </a>
-    <a href="/">
-    <img src="../../../static/images/texto.png" height="64" class="brand-logo responsive-image left-align">
-    </a>
+    
+    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
       <li><i class="large material-icons">account_circle</i></li>
       <li><a href="/users/login/">Login</a></li>
       <li><a href="/users/sign_up/">Criar conta</a></li>
+    </ul>
+    <ul class="side-nav" id="mobile-demo">
+      <li><a href="/">EcomMerci</a></li>
+      <li><a href="/users/login/">Login</a></li>
+      <li><a href="/users/sign_up/">Criar conta</a></li>
+    </ul>
   </div>
 </nav>
- {% endblock%}
+
+{% endblock%}
