--- a/products/templates/productDetail.html
+++ b/products/templates/productDetail.html
@@ -20,9 +20,9 @@
           </a>
 
           <p>Quantidade</p>
-          <form action="" method="POST">
+          <form action={% url 'addProductToCart' product.id %} method="POST">
             {% csrf_token %}
-            <input type="number" name="quantity" min="1" max="100"><br>
+            <input type="number" name="quantity" min="1" max="100" required><br>
             <input type="submit" value="addToCart">
           </form>
 
